@@ -1,3 +1,10 @@
+2010-12-27  Pedro Alves  <pedro@codesourcery.com>
+
+	* breakpoint.c (breakpoint_restore_shadows): When looking for the
+	location with the lowest address that overlaps the memory range we
+	want to restore shadows for, account for multiple locations at the
+	same address.
+
 2010-12-23  Joel Brobecker  <brobecker@adacore.com>
 
 	* mi/mi-main.c (mi_cmd_remove_inferior): Use _() marker for error
